codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apps_popup_loading_state.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 549
expression: before
---
  应 用
  正 在 加 载 已 安 装 和 可 用 的 应 用 ...

›    正 在 加 载 应 用 ...  完 整 列 表 准 备 好 后 ， 这 里 会 自 动 更 新 。
