codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_tall.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 2183
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

• 处理中 (0s • esc 中断)
  .------------.
  | 轻轻漂来。 |
  '------------.
    \
  }~   ~{
  ( ^..^ )
   \__/
  Ripple ★ 常见 美西螈 · 坐立不安

• 排队的后续消息
  ↳ Hello, world! 0
  ↳ Hello, world! 1
  ↳ Hello, world! 2
  ↳ Hello, world! 3
  ↳ Hello, world! 4
  ↳ Hello, world! 5
  ↳ Hello, world! 6
  ↳ Hello, world! 7

› Ask Codex to do anything

  gpt-5.3-codex 默认 · 已用 0% · /tmp/project
