codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compact_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

• 处理中 (0s • esc 中断)
  .--------------------------------.
  | 礼貌地从底栏飘上来。                     |
  '--------------------------------.
    \
   .---.
  ( ^ ^ )
  / ~~~ \\
  Echo ★ 常见 幽灵 · 可见 · 坐立不安
  峰值 耐心 74 · 无 · 困倦眼 · 孵化中 · 抚摸 0

• 回合结束后提交的消息
  ↳ Steer submitted while /compact was running.

› Ask Codex to do anything

  gpt-5.3-codex 默认 · 剩余 100% · /tmp/project
