codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_hook_output_precedes_following_assistant_message_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1608
expression: "format!(\"active hooks:\\n{}history:\\n{history}\", active_hook_blob(&chat))"
---
active hooks:
<empty>
history:
• 工具调用前 钩子（已拦截）
  反馈：command blocked by policy

• The hook feedback was applied.
