codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_hook_with_output_flushes_immediately_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1570
expression: "format!(\"{running_snapshot}\\n\\n{completed_snapshot}\")"
---
running
live hooks:
• 正在运行 工具调用前 钩子：checking command
history:
<empty>

completed
live hooks:
<empty>
history:
• 工具调用前 钩子（已拦截）
  反馈：command blocked by policy
